<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/porcelain"
    tools:context=".userside.activities.address.AddNewAddress">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/layout_backArrow"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_16sdp"

        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/bg_white_rounded_8dp"
        android:elevation="@dimen/_15sdp">

        <ImageView
            android:layout_width="@dimen/_8sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/text_todo"
            android:src="@drawable/ic_back_arrow" />

    </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_22sdp"
            android:fontFamily="@font/barlow_semibold"
            android:text="@string/addnewaddress"
            android:textColor="@color/haiti"
            android:textSize="@dimen/_14sdp" />

    <RelativeLayout
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_bell_home" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_below="@+id/layout_backArrow">
        <LinearLayout
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/ed_back_green">
            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:fontFamily="@font/barlow_medium"
                android:textColor="@color/colorc"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@null"
                android:textColor="@color/haiti"
                android:text="@string/lucy"
                android:gravity="start"
                android:textSize="@dimen/_13sdp"
                android:fontFamily="@font/barlow_medium"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/ed_back_green">
            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailaddress"
                android:fontFamily="@font/barlow_medium"
                android:textColor="@color/colorc"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@null"
                android:textColor="@color/haiti"
                android:text="@string/ema"
                android:gravity="start"
                android:textSize="@dimen/_13sdp"
                android:fontFamily="@font/barlow_medium"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/ed_back_green">
            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phonenumnber"
                android:fontFamily="@font/barlow_medium"
                android:textColor="@color/colorc"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@null"
                android:textColor="@color/haiti"
                android:text="@string/ph"
                android:gravity="start"
                android:textSize="@dimen/_13sdp"
                android:fontFamily="@font/barlow_medium"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/ed_back_green">
            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addressline1"
                android:fontFamily="@font/barlow_medium"
                android:textColor="@color/colorc"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@null"
                android:textColor="@color/haiti"
                android:text="@string/ad"
                android:gravity="start"
                android:textSize="@dimen/_13sdp"
                android:fontFamily="@font/barlow_medium"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/ed_back_green">
            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addressline2"
                android:fontFamily="@font/barlow_medium"
                android:textColor="@color/colorc"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@null"
                android:textColor="@color/haiti"
                android:text="@string/addh"
                android:gravity="start"
                android:textSize="@dimen/_13sdp"
                android:fontFamily="@font/barlow_medium"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/ed_back_green">
            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zipcode"
                android:fontFamily="@font/barlow_medium"
                android:textColor="@color/colorc"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@null"
                android:textColor="@color/haiti"
                android:text="@string/ziph"
                android:gravity="start"
                android:textSize="@dimen/_13sdp"
                android:fontFamily="@font/barlow_medium"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/ed_back_green">
            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:fontFamily="@font/barlow_medium"
                android:textColor="@color/colorc"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@null"
                android:textColor="@color/haiti"
                android:text="@string/stah"
                android:gravity="start"
                android:textSize="@dimen/_13sdp"
                android:fontFamily="@font/barlow_medium"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/ed_back_green">
            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:fontFamily="@font/barlow_medium"
                android:textColor="@color/colorc"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:fontFamily="@font/barlow_medium"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                />
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/layout_send"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginVertical="@dimen/_30sdp"
            android:background="@drawable/bg_green_rounded_30dp"
            android:elevation="@dimen/_12sdp">

            <TextView
                android:id="@+id/tvnext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_36sdp"
                android:fontFamily="@font/barlow_medium"
                android:text="@string/addnewaddress"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />



        </RelativeLayout>
    </LinearLayout>

    </RelativeLayout>
</ScrollView>