<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userside.activities.auth.ForgotPassword">


    <RelativeLayout
        android:id="@+id/layout_backArrow"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/bg_white_rounded_8dp"
        android:elevation="@dimen/_15sdp">

        <ImageView
            android:layout_width="@dimen/_8sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/text_todo"
            android:src="@drawable/ic_back_arrow" />

    </RelativeLayout>

    <TextView
        android:id="@+id/text_verifyMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_24sdp"
        android:fontFamily="@font/barlow_semibold"
        android:text="@string/forgotpassword"
        android:textColor="@color/hintcolor"
        android:textSize="@dimen/_13sdp" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_verifyMobile"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_36sdp"
        android:fontFamily="@font/barlow_medium"
        android:gravity="center"
        android:text="@string/pleaseenteremailtoreceivelink"
        android:textColor="@color/smokey_grey"
        android:textSize="@dimen/_12sdp" />

    <RelativeLayout
        android:id="@+id/layout_mobileNumber"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@id/text_description"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_30sdp"
        android:background="@drawable/bg_white_outline_green_rounded_30dp"
        android:elevation="@dimen/_1sdp">

        <EditText
            android:id="@+id/edit_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:fontFamily="@font/barlow_medium"
            android:hint="Email Address"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/smokey_grey"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="@dimen/_11sdp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/text_anotherWay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_mobileNumber"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/barlow_medium"
        android:text="@string/tryAnotherWay"
        android:textColor="@color/appColor"
        android:textSize="@dimen/_13sdp"
        android:visibility="gone" />


    <RelativeLayout
        android:id="@+id/layout_send"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_below="@id/layout_mobileNumber"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_30sdp"
        android:background="@drawable/bg_green_rounded_30dp"
        android:elevation="@dimen/_8sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/barlow_medium"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

    </RelativeLayout>
    <com.sn.lib.NestedProgress
        android:visibility="gone"
        android:id="@+id/dotloader"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        app:innerAnimInterpolator="linear"
        app:outerAnimInterpolator="overshoot"
        android:layout_centerInParent="true"
        app:innerLoaderStrokeWidth="6dp"
        app:outerLoaderStrokeWidth="6dp"
        app:outerLoaderColor="@color/appColor"
        app:innerLoaderColor="@color/light_grey"
        app:outerLoaderAnimDuration="1500" />
</RelativeLayout>
